spacing fix

--- a/sxsw/style.css
+++ b/sxsw/style.css
@@ -69,10 +69,10 @@
 
 @media (min-width: 768px) {
   .band-video:nth-child(odd) {
-    padding: 0 10px 0 0;
+    padding: 0 15px 0 0;
   }
   .band-video:nth-child(even) {
-    padding: 0 0 0 10px;
+    padding: 0 0 0 15px;
   }
 }
 
